--- a/index.html
+++ b/index.html
@@ -161,14 +161,16 @@
   color: white;
   min-height: 700px;
 ">
-  <div style="
-    background-color: rgba(0, 0, 0, 0.75);
-    display: inline-block;
-    padding: 25px 50px;
-    border-radius: 12px;
-    margin-bottom: 40px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-  ">
+<div style="
+  background-color: rgba(0, 0, 0, 0.35);
+  display: inline-block;
+  padding: 20px 40px;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+  backdrop-filter: blur(2px);
+">
+
     <h2 style="
       font-size: 3.2em;
       color: #ffd700;
