--- a/index.html
+++ b/index.html
@@ -184,20 +184,36 @@
   <div style="clear: both;"></div>
 
   <!-- Paragraph box with soft dark background -->
-  <div style="
-    background-color: rgba(0, 0, 0, 0.4);
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 30px;
-    border-radius: 12px;
-    backdrop-filter: blur(3px);
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
+ <div style="
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.25);
+  padding: 20px 30px;
+  border-radius: 10px;
+  backdrop-filter: blur(2px);
+  max-width: 850px;
+  margin: 0 auto;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  text-align: left;
+">
+  <p style="
+    font-size: 1.2em;
+    line-height: 1.7;
+    font-weight: 400;
+    margin: 0;
+    color: white;
   ">
-    <p style="
-      font-size: 1.2em;
-      line-height: 1.7;
-      font-weight: 400;
-    ">
+    At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.
+    <br><br>
+    Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.
+    <br><br>
+    That tradition inspired us to bring the same flavor, passion, and hospitality to <strong>Quincy, Illinois</strong> — a place we now proudly call home.
+    <br><br>
+    Every Spincy wrap is handcrafted with marinated chicken, warm lavash, fresh vegetables, and bold, savory sauce — all served with care and love.
+    <br><br>
+    Whether you’re grabbing a quick bite or connecting with friends, we’re here to turn every meal into a flavorful moment that brings people together.
+  </p>
+</div>
+
       At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.
       
       Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.
