--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
       text-align: left;
     }
 
-    .about-paragraph-box p {
-      font-size: 1.2em;
-      line-height: 1.7;
-      font-weight: 400;
-      margin: 0;
-      color: white;
-    }
+.about-paragraph-box p {
+  font-size: 1.2em;
+  line-height: 1.7;
+  font-weight: 400;
+  margin-bottom: 16px;
+  color: white;
+}
+
 
     .mission {
       background-color: #fff8f0;
@@ -170,15 +171,14 @@
     <h2>Our Story</h2>
   </div>
   <div style="clear: both;"></div>
-  <div class="about-paragraph-box">
-    <p>
-      At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.<br><br>
-      Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.<br><br>
-      That tradition inspired us to bring the same flavor, passion, and hospitality to <strong>Quincy, Illinois</strong> — a place we now proudly call home.<br><br>
-      Every Spincy wrap is handcrafted with marinated chicken, warm lavash, fresh vegetables, and bold, savory sauce — all served with care and love.<br><br>
-      Whether you’re grabbing a quick bite or connecting with friends, we’re here to turn every meal into a flavorful moment that brings people together.
-    </p>
-  </div>
+ <div class="about-paragraph-box">
+  <p>At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.</p>
+  <p>Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.</p>
+  <p>That tradition inspired us to bring the same flavor, passion, and hospitality to <strong>Quincy, Illinois</strong> — a place we now proudly call home.</p>
+  <p>Every Spincy wrap is handcrafted with marinated chicken, warm lavash, fresh vegetables, and bold, savory sauce — all served with care and love.</p>
+  <p>Whether you’re grabbing a quick bite or connecting with friends, we’re here to turn every meal into a flavorful moment that brings people together.</p>
+</div>
+
 </section>
 
 <!-- MISSION -->
