--- a/index.html
+++ b/index.html
@@ -166,11 +166,25 @@
 </nav>
 
 <!-- OUR STORY -->
-<section id="about">
-  <div class="about-heading-box">
-    <h2>Our Story</h2>
-  </div>
-  <div style="clear: both;"></div>
+<div style="
+  background: rgba(161, 20, 20, 0.75); /* darker Spincy red */
+  padding: 25px 50px;
+  clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+  border-radius: 10px;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+  backdrop-filter: blur(3px);
+  float: right;
+  margin-right: 40px;
+">
+  <h2 style="
+    font-size: 3em;
+    color: #ffd700;
+    font-weight: bold;
+    margin: 0;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+  ">Our Story</h2>
+</div>
+
  <div class="about-paragraph-box">
   <p>At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.</p>
   <p>Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.</p>
