--- a/index.html
+++ b/index.html
@@ -150,19 +150,33 @@
 </head>
 <body>
 
-<!-- NAVIGATION -->
-<nav>
-  <a href="/" class="logo">
-    <img src="spincy logo.png" alt="Spincy Logo">
-  </a>
-  <div>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="menu.html">Menu</a>
-    <a href="catering.html">Catering</a>
-    <a href="#contact">Contact</a>
-  </div>
-</nav>
+<!-- TOP SECTION WITH BACKGROUND IMAGE -->
+<header style="
+  background: url('SO entrance.jpg') center/cover no-repeat;
+  padding: 60px 20px 30px;
+  text-align: center;
+">
+  <nav style="
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    background: transparent;
+    max-width: 1200px;
+    margin: 0 auto;
+  ">
+    <a href="/" class="logo">
+      <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 150px;">
+    </a>
+    <div style="display: flex; gap: 20px;">
+      <a href="#home" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Home</a>
+      <a href="#about" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">About</a>
+      <a href="menu.html" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Menu</a>
+      <a href="catering.html" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Catering</a>
+      <a href="#contact" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Contact</a>
+    </div>
+  </nav>
+</header>
 
 <!-- OUR STORY -->
 <section id="about">
