--- a/index.html
+++ b/index.html
@@ -151,19 +151,22 @@
 <body>
 
 <!-- TOP SECTION WITH BACKGROUND IMAGE -->
-<header style="
-  background: url('SO entrance.jpg') center/cover no-repeat;
-  padding: 60px 20px 30px;
-  text-align: center;
+<!-- UNIFIED HEADER + OUR STORY SECTION -->
+<section style="
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.1)),
+              url('SO_entrance_web_header.jpg') center/cover no-repeat;
+  padding: 80px 20px 100px;
+  color: white;
+  min-height: 100vh;
 ">
+  <!-- Navigation -->
   <nav style="
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    background: transparent;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto 60px;
   ">
     <a href="/" class="logo">
       <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 150px;">
@@ -176,15 +179,42 @@
       <a href="#contact" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Contact</a>
     </div>
   </nav>
-</header>
 
-<!-- OUR STORY -->
-<section id="about">
-  <div class="about-heading-box">
-    <h2>Our Story</h2>
+  <!-- Our Story Heading -->
+  <div style="
+    background: rgba(161, 20, 20, 0.75);
+    padding: 25px 50px;
+    clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+    border-radius: 10px;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+    backdrop-filter: blur(3px);
+    float: right;
+    margin-right: 40px;
+    margin-bottom: 40px;
+  ">
+    <h2 style="
+      font-size: 3em;
+      color: #ffd700;
+      font-weight: bold;
+      margin: 0;
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+    ">Our Story</h2>
   </div>
+
   <div style="clear: both;"></div>
-  <div class="about-paragraph-box">
+
+  <!-- Our Story Text -->
+  <div style="
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.25);
+    padding: 20px 30px;
+    border-radius: 10px;
+    backdrop-filter: blur(2px);
+    max-width: 850px;
+    margin: 0 auto;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    text-align: left;
+  ">
     <p>At <strong>Spincy</strong>, we believe food is more than fuel — it’s comfort, culture, and connection.</p>
     <p>Our love for chicken döner was born in the vibrant streets of <strong>Istanbul</strong>, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.</p>
     <p>That tradition inspired us to bring the same flavor, passion, and hospitality to <strong>Quincy, Illinois</strong> — a place we now proudly call home.</p>
