--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- UNIFIED HEADER + OUR STORY SECTION -->
 <section style="
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.1)),
-              url('SO_entrance_web_header.jpg') center/cover no-repeat;
+              url('SO entrance.jpg') center/cover no-repeat;
   padding: 80px 20px 100px;
   color: white;
   min-height: 100vh;
