--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <!-- UNIFIED HEADER + OUR STORY SECTION -->
 <section style="
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.1)),
-              url('SO entrance.jpg') center/cover no-repeat;
-  padding: 80px 20px 100px;
+              url('SO_entrance_web_header.jpg') center/cover no-repeat;
+  padding: 0 20px 100px;
   color: white;
   min-height: 100vh;
 ">
@@ -51,17 +51,18 @@
     justify-content: space-between;
     align-items: center;
     max-width: 1200px;
-    margin: 0 auto 60px;
+    margin: 0 auto;
+    padding: 20px 0;
   ">
     <a href="/" class="logo">
-      <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 150px;">
+      <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 180px;">
     </a>
-    <div style="display: flex; gap: 20px;">
-      <a href="#home" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Home</a>
-      <a href="#about" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">About</a>
-      <a href="menu.html" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Menu</a>
-      <a href="catering.html" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Catering</a>
-      <a href="#contact" style="color: white; text-decoration: none; font-weight: bold; text-shadow: 1px 1px 3px black;">Contact</a>
+    <div style="display: flex; gap: 30px; font-size: 1.3em; font-weight: bold;">
+      <a href="#home" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Home</a>
+      <a href="#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
+      <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
+      <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering</a>
+      <a href="#contact" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Contact</a>
     </div>
   </nav>
 
