--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
   </style>
 </head>
-<body>
+<body style="margin: 0;">
 
 <!-- UNIFIED HEADER + OUR STORY SECTION -->
 <section style="
@@ -52,12 +52,13 @@
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 0;
+    height: 180px;
   ">
     <a href="/" class="logo">
       <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 180px;">
     </a>
-    <div style="display: flex; gap: 30px; font-size: 1.3em; font-weight: bold;">
+    <div style="display: flex; gap: 30px; font-size: 1.4em; font-weight: bold; align-items: center;">
       <a href="#home" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Home</a>
       <a href="#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
       <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
