--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- UNIFIED HEADER + OUR STORY SECTION -->
 <section style="
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.1)),
-              url('SO_entrance_web_header.jpg') center/cover no-repeat;
+              url('SO entrance.jpg') center/cover no-repeat;
   padding: 0 20px 100px;
   color: white;
   min-height: 100vh;
@@ -53,7 +53,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0;
-    height: 180px;
+    height: 80px;
   ">
     <a href="/" class="logo">
       <img src="spincy logo.png" alt="Spincy Logo" style="max-height: 180px;">
