--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- UNIFIED HEADER + OUR STORY SECTION -->
 <section style="
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.1)),
-              url('SO entrancer.jpg') center/cover no-repeat;
+              url('SO_entrance_web_header.jpg') center/cover no-repeat;
   padding: 0 20px 100px;
   color: white;
   min-height: 100vh;
@@ -108,6 +108,29 @@
     <p style="font-size: 1.2em; line-height: 1.7; margin-bottom: 16px;">That tradition inspired us to bring the same flavor, passion, and hospitality to <strong>Quincy, Illinois</strong> — a place we now proudly call home.</p>
     <p style="font-size: 1.2em; line-height: 1.7; margin-bottom: 16px;">Every Spincy wrap is handcrafted with marinated chicken, warm lavash, fresh vegetables, and bold, savory sauce — all served with care and love.</p>
     <p style="font-size: 1.2em; line-height: 1.7;">Whether you’re grabbing a quick bite or connecting with friends, we’re here to turn every meal into a flavorful moment that brings people together.</p>
+  </div>
+</section>
+
+<!-- MISSION SECTION -->
+<section id="mission" style="background-color: #fff8f0; padding: 60px 20px;">
+  <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; max-width: 1200px; margin: 0 auto; gap: 40px;">
+    <div style="flex: 1; min-width: 300px;">
+      <h2 style="font-size: 2.5em; color: #e12c2c; margin-bottom: 20px;">Our Mission</h2>
+      <p style="font-size: 1.1em; line-height: 1.6;">
+        At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
+        Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
+        a simple way for customers to donate a meal for someone in need.
+        <br><br>
+        Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
+        Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+      </p>
+      <a href="#contact" style="display:inline-block; background:#e12c2c; color:white; padding:12px 25px; text-decoration:none; border-radius:6px; font-weight:bold; margin-top:20px;">
+        🍽️ Donate a Meal
+      </a>
+    </div>
+    <div style="flex: 1; min-width: 300px;">
+      <img src="hoagie.jpg" alt="Spincy Hoagie" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    </div>
   </div>
 </section>
 
