--- a/index.html
+++ b/index.html
@@ -115,7 +115,24 @@
 <section id="mission" style="background-color: #fff8f0; padding: 60px 20px;">
   <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; max-width: 1200px; margin: 0 auto; gap: 40px;">
     <div style="flex: 1; min-width: 300px;">
-      <h2 style="font-size: 2.5em; color: #e12c2c; margin-bottom: 20px;">Our Mission</h2>
+     <div style="
+  background: #ffd700;
+  padding: 25px 50px;
+  clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+  border-radius: 10px;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+  margin-bottom: 40px;
+  display: inline-block;
+">
+  <h2 style="
+    font-size: 2.5em;
+    color: #a11414;
+    font-weight: bold;
+    margin: 0;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  ">Our Mission</h2>
+</div>
+
       <p style="font-size: 1.1em; line-height: 1.6;">
         At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
         Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
