--- a/index.html
+++ b/index.html
@@ -141,9 +141,22 @@
         Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
         Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
       </p>
-      <a href="#contact" style="display:inline-block; background:#e12c2c; color:white; padding:12px 25px; text-decoration:none; border-radius:6px; font-weight:bold; margin-top:20px;">
-        🍽️ Donate a Meal
-      </a>
+   <div style="text-align: center; margin-top: 30px;">
+  <a href="#contact" style="
+    display: inline-block;
+    background: #e12c2c;
+    color: white;
+    padding: 16px 35px;
+    font-size: 1.2em;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+  ">
+    🍽️ Donate a Meal
+  </a>
+</div>
+
     </div>
     <div style="flex: 1; min-width: 300px;">
       <img src="hoagie.jpg" alt="Spincy Hoagie" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
