--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@
     </div>
   </div>
 </section>
+  <section style="background: #fff2e6; padding: 50px 20px; text-align: center;">
+  <h2 style="font-size: 2em; color: #e12c2c; margin-bottom: 20px;">Follow Us</h2>
+  <p style="font-size: 1.1em; margin-bottom: 20px;">See the flavor in action on Instagram!</p>
+  <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
+    background: #e12c2c;
+    color: white;
+    padding: 12px 30px;
+    font-size: 1.1em;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+  ">📸 @spincyquincy</a>
+</section>
+
 
 <!-- FOOTER -->
 <footer>
