--- a/index.html
+++ b/index.html
@@ -163,18 +163,18 @@
     </div>
   </div>
 </section>
-  <section style="background: #fff2e6; padding: 50px 20px; text-align: center;">
-  <h2 style="font-size: 2em; color: #e12c2c; margin-bottom: 20px;">Follow Us</h2>
-  <p style="font-size: 1.1em; margin-bottom: 20px;">See the flavor in action on Instagram!</p>
-  <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
-    background: #e12c2c;
-    color: white;
-    padding: 12px 30px;
-    font-size: 1.1em;
-    border-radius: 6px;
-    text-decoration: none;
-    font-weight: bold;
-  ">📸 @spincyquincy</a>
+<section style="background: #fff2e6; padding: 50px 20px; text-align: center;">
+  <h2 style="font-size: 2em; color: #e12c2c; margin-bottom: 20px;">Stay Connected</h2>
+  <p style="font-size: 1.1em; margin-bottom: 20px;">Follow us on social media and reach out anytime!</p>
+  <div style="display: flex; justify-content: center; gap: 30px; margin-bottom: 20px;">
+    <a href="https://www.instagram.com/spincyquincy" target="_blank">
+      <img src="instagram-icon.png" alt="Instagram" style="width: 40px; height: 40px;">
+    </a>
+    <a href="mailto:info@spincyquincy.com">
+      <img src="email-icon.png" alt="Email" style="width: 40px; height: 40px;">
+    </a>
+  </div>
+  <p style="font-size: 1em; color: #555;">📍 104 N 6th St, Quincy, IL &nbsp;|&nbsp; 📧 info@spincyquincy.com</p>
 </section>
 
 
