--- a/index.html
+++ b/index.html
@@ -163,19 +163,27 @@
     </div>
   </div>
 </section>
-<section style="background: #fff2e6; padding: 50px 20px; text-align: center;">
-  <h2 style="font-size: 2em; color: #e12c2c; margin-bottom: 20px;">Stay Connected</h2>
-  <p style="font-size: 1.1em; margin-bottom: 20px;">Follow us on social media and reach out anytime!</p>
-  <div style="display: flex; justify-content: center; gap: 30px; margin-bottom: 20px;">
-    <a href="https://www.instagram.com/spincyquincy" target="_blank">
-      <img src="instagram-icon.png" alt="Instagram" style="width: 40px; height: 40px;">
-    </a>
-    <a href="mailto:info@spincyquincy.com">
-      <img src="email-icon.png" alt="Email" style="width: 40px; height: 40px;">
-    </a>
+<section style="
+  background: url('spin us.png') center/cover no-repeat;
+  padding: 100px 20px;
+  text-align: center;
+  color: white;
+  position: relative;
+">
+  <div style="backdrop-filter: blur(2px); background-color: rgba(0,0,0,0.4); padding: 40px; border-radius: 10px; display: inline-block;">
+    <h2 style="font-size: 2.5em; margin-bottom: 20px; color: #ffd700;">Spin Us</h2>
+    <p style="font-size: 1.2em; margin-bottom: 30px;">Let’s connect — we’d love to hear from you!</p>
+    <div style="display: flex; justify-content: center; gap: 30px;">
+      <a href="https://www.instagram.com/spincyquincy" target="_blank">
+        <img src="instagram.png" alt="Instagram" style="width: 50px; height: 50px;">
+      </a>
+      <a href="mailto:info@spincyquincy.com">
+        <img src="email.jpg" alt="Email" style="width: 50px; height: 50px;">
+      </a>
+    </div>
   </div>
-  <p style="font-size: 1em; color: #555;">📍 104 N 6th St, Quincy, IL &nbsp;|&nbsp; 📧 info@spincyquincy.com</p>
 </section>
+
 
 
 <!-- FOOTER -->
