--- a/index.html
+++ b/index.html
@@ -164,12 +164,14 @@
   </div>
 </section>
 <section style="
-  background: url('spin us.png') center/cover no-repeat;
-  padding: 100px 20px;
+  background: url('spin us.png') center/contain no-repeat;
+  background-color: #fff2e6;
+  padding: 120px 20px;
   text-align: center;
   color: white;
   position: relative;
 ">
+
   <div style="backdrop-filter: blur(2px); background-color: rgba(0,0,0,0.4); padding: 40px; border-radius: 10px; display: inline-block;">
     <h2 style="font-size: 2.5em; margin-bottom: 20px; color: #ffd700;">Spin Us</h2>
     <p style="font-size: 1.2em; margin-bottom: 30px;">Let’s connect — we’d love to hear from you!</p>
