--- a/index.html
+++ b/index.html
@@ -171,20 +171,17 @@
   color: white;
   position: relative;
 ">
-
-  <div style="backdrop-filter: blur(2px); background-color: rgba(0,0,0,0.4); padding: 40px; border-radius: 10px; display: inline-block;">
-    <h2 style="font-size: 2.5em; margin-bottom: 20px; color: #ffd700;">Spin Us</h2>
-    <p style="font-size: 1.2em; margin-bottom: 30px;">Let’s connect — we’d love to hear from you!</p>
-    <div style="display: flex; justify-content: center; gap: 30px;">
-      <a href="https://www.instagram.com/spincyquincy" target="_blank">
-        <img src="instagram.png" alt="Instagram" style="width: 50px; height: 50px;">
-      </a>
-      <a href="mailto:info@spincyquincy.com">
-        <img src="email.jpg" alt="Email" style="width: 50px; height: 50px;">
-      </a>
-    </div>
+  <h2 style="font-size: 2.5em; margin-bottom: 20px; color: #ffd700;">Spin Us</h2>
+  <div style="display: flex; justify-content: center; gap: 40px; margin-top: 220px;">
+    <a href="https://www.instagram.com/spincyquincy" target="_blank">
+      <img src="instagram.png" alt="Instagram" style="width: 70px; height: 70px;">
+    </a>
+    <a href="mailto:info@spincyquincy.com">
+      <img src="email.jpg" alt="Email" style="width: 70px; height: 70px;">
+    </a>
   </div>
 </section>
+
 
 
 
