--- a/index.html
+++ b/index.html
@@ -170,16 +170,25 @@
   text-align: center;
   color: white;
   position: relative;
+  min-height: 500px;
 ">
-  <h2 style="font-size: 2.5em; margin-bottom: 20px; color: #ffd700;">Spin Us</h2>
-  <div style="display: flex; justify-content: center; gap: 40px; margin-top: 220px;">
-    <a href="https://www.instagram.com/spincyquincy" target="_blank">
-      <img src="instagram.png" alt="Instagram" style="width: 70px; height: 70px;">
-    </a>
-    <a href="mailto:info@spincyquincy.com">
-      <img src="email.jpg" alt="Email" style="width: 70px; height: 70px;">
-    </a>
-  </div>
+ 
+
+  <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+  ">
+    <img src="instagram.png" alt="Instagram" style="width: 70px; height: 70px;">
+  </a>
+
+  <a href="mailto:spincyquincy@gmail.com" style="
+    position: absolute;
+    bottom: 40px;
+    right: 40px;
+  ">
+    <img src="email.jpg" alt="Email" style="width: 70px; height: 70px;">
+  </a>
 </section>
 
 
