--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
   position: relative;
   min-height: 500px;
 ">
+    <!-- DoorDash Icon - Top Left -->
+  <a href="https://www.doordash.com/store/spincy-quincy" target="_blank" style="
+    position: absolute;
+    top: 30px;
+    left: 30px;
+  ">
+    <img src="doordash.jfif" alt="DoorDash" style="width: 65px; height: 65px;">
+  </a>
  
 
   <a href="https://www.instagram.com/spincyquincy" target="_blank" style="
