--- a/menu.html
+++ b/menu.html
@@ -2,67 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spincy | Menu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Menu – Spincy Quincy</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fff3ea;
-      color: #333;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; background: #fff8f0; color: #333; }
+
     nav {
-      background: #e12c2c;
-      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 10px 30px;
+      background: #e12c2c;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
+
+    nav img {
+      height: 100px;
+    }
+
     nav a {
       color: white;
       text-decoration: none;
-      margin-left: 20px;
+      margin-left: 25px;
+      font-size: 1.2em;
       font-weight: bold;
+      text-shadow: 1px 1px 2px black;
     }
-    h1 {
+
+    header {
+      background: linear-gradient(to bottom, #e12c2c, #a31212);
+      color: white;
+      padding: 60px 20px;
       text-align: center;
-      padding: 40px 20px 10px;
-      font-size: 2.5em;
     }
-    .iframe-wrapper {
-      display: flex;
-      justify-content: center;
-      margin: 30px 0 60px;
+
+    header h1 {
+      font-size: 3em;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
-    iframe {
-      width: 100%;
-      max-width: 1000px;
-      height: 1200px;
-      border: none;
-      border-radius: 12px;
+
+    footer {
+      background: #222;
+      color: #eee;
+      text-align: center;
+      padding: 20px;
+      margin-top: 60px;
     }
   </style>
 </head>
 <body>
 
+  <!-- Navigation -->
   <nav>
-    <div style="color:white; font-size: 1.4em; font-weight: bold;">Spincy</div>
+    <a href="/">
+      <img src="spincy logo.png" alt="Spincy Logo">
+    </a>
     <div>
       <a href="index.html#home">Home</a>
       <a href="index.html#about">About</a>
       <a href="menu.html">Menu</a>
-      <a href="index.html#mission">Mission</a>
+      <a href="catering.html">Catering</a>
       <a href="index.html#contact">Contact</a>
     </div>
   </nav>
 
-  <h1>Our Menu</h1>
-  <div class="iframe-wrapper">
-    <iframe 
-      src="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#TJB2TK6DCT2U734O4NS3CVSE">
-    </iframe>
-  </div>
+  <!-- Header -->
+  <header>
+    <h1>Explore Our Delicious Menu</h1>
+  </header>
+
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Spincy Quincy. All rights reserved.
+  </footer>
 
 </body>
 </html>
+
